@@ -1,6 +1,12 @@
 2008-07-16  Dan Nicolaescu  <dann@ics.uci.edu>
 
+	* m/m68k.h (linux): Use GNU_LINUX instead.
+	Remove boilerplate comments.
+
 	* m/intel386.h: Undo reactoring from previous change.
+	(LIB_STANDARD): All systems that define USG define LIB_STANDARD
+	too, remove dead code.
+	(linux): Use GNU_LINUX instead.
 
 2008-07-16  Jason Rumney  <jasonr@gnu.org>
 
